--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "firebase": "^12.1.0",
     "lucide-react": "^0.427.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
