--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,19 @@
 {
   "redirects": [
     {
-      "source": "http://hyundaigialaiofficial.com.vn/:path*",
+      "source": "/:path*",
+      "has": [{ "type": "host", "value": "www.hyundaigialaiofficial.com.vn" }],
       "destination": "https://hyundaigialaiofficial.com.vn/:path*",
       "permanent": true
     },
     {
-      "source": "https://www.hyundaigialaiofficial.com.vn/:path*",
+      "source": "/:path*",
+      "has": [
+        { "type": "header", "key": "x-forwarded-proto", "value": "http" }
+      ],
       "destination": "https://hyundaigialaiofficial.com.vn/:path*",
       "permanent": true
     }
   ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
-  
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
